--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "homepage": "https://github.com/Hackbit/nko2018-p2pwithme#readme",
   "scripts": {
-    "dev": "nodemon -e ts,js src/server.ts",
-    "start": "ts-node server.ts",
+    "dev": "nodemon -e ts,js --exec npm start",
+    "start": "node --require dotenv-safe/config --require ts-node/register src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "@types/ejs": "2.6.0",
     "@types/express": "4.16.0",
+    "dotenv-safe": "6.1.0",
     "nodemon": "1.18.5",
     "ts-node": "7.0.1",
     "typescript": "3.1.3"
