--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/ejs": "2.6.0",
     "@types/express": "4.16.0",
+    "@types/uuid": "3.4.4",
     "dotenv-safe": "6.1.0",
     "nodemon": "1.18.5",
     "ts-node": "7.0.1",
