--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "homepage": "https://github.com/Hackbit/nko2018-p2pwithme#readme",
   "scripts": {
-    "dev": "nodemon -e ts,js --exec npm start",
+    "dev:cs": "nodemon -e ts --exec node --require ts-node/register demo/client-server/server.ts",
+    "dev": "nodemon -e ts --exec node --require dotenv-safe/config --require ts-node/register src/server.ts",
     "start": "node --require dotenv-safe/config --require ts-node/register src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,15 +24,17 @@
     "@types/ejs": "2.6.0",
     "@types/express": "4.16.0",
     "@types/uuid": "3.4.4",
+    "@types/ws": "6.0.1",
     "dotenv-safe": "6.1.0",
     "nodemon": "1.18.5",
-    "ts-node": "7.0.1",
     "typescript": "3.1.3"
   },
   "dependencies": {
     "body-parser": "1.18.3",
     "ejs": "2.6.1",
     "express": "4.16.4",
-    "uuid": "3.3.2"
+    "ts-node": "7.0.1",
+    "uuid": "3.3.2",
+    "ws": "6.1.0"
   }
 }
