--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
   },
   "homepage": "https://github.com/Hackbit/nko2018-p2pwithme#readme",
   "scripts": {
-    "dev:cs": "nodemon -e ts --exec node --require ts-node/register demo/client-server/server.ts",
+    "build": "babel ./src --out-dir dist --extensions \".ts\"",
+    "dev:cs": "nodemon --watch demo/client-server --exec node demo/client-server/server.js",
     "dev": "nodemon -e ts --exec node --require dotenv-safe/config --require ts-node/register src/server.ts",
-    "start": "node --require dotenv-safe/config --require ts-node/register src/server.ts",
+    "start": "node --require dotenv-safe/config dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-typescript": "7.1.0",
     "@types/ejs": "2.6.0",
     "@types/express": "4.16.0",
     "@types/uuid": "3.4.4",
