--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-typescript": "7.1.0",
     "@types/ejs": "2.6.0",
     "@types/express": "4.16.0",
+    "@types/request": "2.48.0",
     "@types/uuid": "3.4.4",
     "@types/ws": "6.0.1",
     "dotenv-safe": "6.1.0",
@@ -40,6 +41,7 @@
     "body-parser": "1.18.3",
     "ejs": "2.6.1",
     "express": "4.16.4",
+    "request": "2.88.0",
     "ts-node": "7.0.1",
     "uuid": "3.3.2",
     "ws": "6.1.0"
