--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["@babel/env", "@babel/preset-typescript"],
+  "presets": [
+    ["@babel/env", { "targets": { "node": true } }],
+    "@babel/preset-typescript"
+  ],
   "plugins": [
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread"
